03-k8s-manifests/network-policies/01-default-deny.yaml
# ~/prod-gke/03-k8s-manifests/network-policies/01-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: prod-ns
spec:
  podSelector: {} # The empty selector means "match ALL pods in this namespace"
  policyTypes:
  - Ingress
  - Egress
